@@ -88,7 +88,9 @@ class HelpBrowser(QtCore.QObject) :
 
         This slot is called when:
 
-            - :meth:`vitables.docbrowser.bookmarksdlg.BookmarksDlg.displayBookmark` is launched
+            - :meth:
+                `vitables.docbrowser.bookmarksdlg.BookmarksDlg.displayBookmark`
+                is launched
             - a new item is activated in the `History` combo
             - an entry is selected in the `Bookmarks` menu
 
@@ -115,7 +117,7 @@ class HelpBrowser(QtCore.QObject) :
         Quit the `HelpBrowser`.
 
         Before quitting this slot saves session and bookmarks. Then all browser
-        windows are closed. The saved state corresponds to the window on which 
+        windows are closed. The saved state corresponds to the window on which
         Exit is invoqued.
         """
 
@@ -171,7 +173,8 @@ class HelpBrowser(QtCore.QObject) :
     def updateBackward(self, available) :
         """Enables/disables the ``Go --> Backward`` menu item.
 
-        :Parameter available: a boolean. Indicates if a Previous page is available
+        :Parameter available: a boolean. Indicates if a Previous page is
+            available
         """
         self.gui.actions['goBackward'].setEnabled(available)
 
@@ -237,8 +240,9 @@ class HelpBrowser(QtCore.QObject) :
         - a link is clicked in the current document
         - a bookmark is opened
 
-        The history combobox is a visual representation of the `history list`, 
-        so entries will occupy the same position in both, the list and the combo.
+        The history combobox is a visual representation of the `history list`,
+        so entries will occupy the same position in both, the list and the
+        combo.
 
         :Parameter src: the path being added to the combo
         """
@@ -264,7 +268,7 @@ class HelpBrowser(QtCore.QObject) :
         """
 
         QtGui.QMessageBox.information(self.gui, \
-            translate('HelpBrowser', 'About HelpBrowser', 'A dialog caption'), 
+            translate('HelpBrowser', 'About HelpBrowser', 'A dialog caption'),
             translate('HelpBrowser', """<html><h3>HelpBrowser</h3>
                 HelpBrowser is a very simple tool for displaying the HTML
                 version of the ViTables' Guide without using external programs.
