@@ -3,6 +3,8 @@ ViTables ChangeLog
 ** October 01, 2013**
 Checking modules directly under the vitables package with pylint.
 
+The package docbrowser has been analyzed with pylint.
+
 ** September 30, 2013 **
 The modules vtSite and vtGUI hav been renamed accordingly to PEP 8.
 
